templates/network/flannel.yaml
---
  kind: ClusterRole
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: flannel
  rules:
    - apiGroups:
        - ""
      resources:
        - pods
      verbs:
        - get
    - apiGroups:
        - ""
      resources:
        - nodes
      verbs:
        - list
        - watch
    - apiGroups:
        - ""
      resources:
        - nodes/status
      verbs:
        - patch
  ---
  kind: ClusterRoleBinding
  apiVersion: rbac.authorization.k8s.io/v1beta1
  metadata:
    name: flannel
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: flannel
  subjects:
  - kind: ServiceAccount
    name: flannel
    namespace: kube-system
  ---
  apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: flannel
    namespace: kube-system
  ---
  kind: ConfigMap
  apiVersion: v1
  metadata:
    name: kube-flannel-cfg
    namespace: kube-system
    labels:
      tier: node
      app: flannel
  data:
    cni-conf.json: |
      {
        "name": "cbr0",
        "plugins": [
          {
            "type": "flannel",
            "delegate": {
              "hairpinMode": true,
              "isDefaultGateway": true
            }
          },
          {
            "type": "portmap",
            "capabilities": {
              "portMappings": true
            }
          }
        ]
      }
    net-conf.json: |
      {
        "Network": "10.200.0.0/16",
        "Backend": {
          "Type": "vxlan"
        }
      }
  ---
  apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    name: kube-flannel-ds
    namespace: kube-system
    labels:
      tier: node
      app: flannel
  spec:
    template:
      metadata:
        labels:
          tier: node
          app: flannel
      spec:
        hostNetwork: true
        nodeSelector:
          beta.kubernetes.io/arch: amd64
        tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        serviceAccountName: flannel
        containers:
        - name: kube-flannel
          image: quay.io/coreos/flannel:v0.10.0-amd64
          command:
          - /opt/bin/flanneld
          args:
          - --ip-masq
          - --kube-subnet-mgr
          resources:
            requests:
              cpu: "100m"
              memory: "50Mi"
            limits:
              cpu: "100m"
              memory: "50Mi"
          securityContext:
            privileged: true
          volumeMounts:
          - name: run
            mountPath: /run
          - name: flannel-cfg
            mountPath: /etc/kube-flannel/
        volumes:
          - name: run
            hostPath:
              path: /run
          - name: cni
            hostPath:
              path: /etc/cni/net.d
          - name: flannel-cfg
            configMap:
              name: kube-flannel-cfg
