templates/network/NetworkPolicy_simple.yaml
# Reference page: https://kubernetes.io/docs/tasks/administer-cluster/declare-network-policy/
# This is simple policy which allows access to nginx service/pods only with other pods labelled with access=true
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      run: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: "true"
